--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+version 0.0.2
+	- Fixed build system so that make dist works.
+
 version 0.0.1
 	- Initial version of provman.
 	- Contains 3 plugins for oFono, SyncEvolution and Evolution
+
